--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -5,6 +5,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Chemistry 1AD Database</title>
+
+    <link rel="stylesheet" href="public/styles/css/app.css" >
 </head>
 <body class="container">
 
