--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,6 +7,7 @@
     <title>Chemistry 1AD Database</title>
 
     <link rel="stylesheet" href="public/styles/css/app.css" >
+    <script src="/scripts/jquery-2.2.2.min.js"></script>
 </head>
 <body class="container">
 
@@ -18,7 +19,7 @@ FILTERS GO HERE
     </main>
 
     <footer>
-        <img src="../../public/images/logo.jpg" alt="" />
+        <img src="/images/logo.jpg" alt="" />
     </footer>
 
 </body>
