--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,8 +6,11 @@
     <meta charset="UTF-8">
     <title>Chemistry 1AD Database</title>
 
+    <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css" charset="utf-8">
+
     <link rel="stylesheet" href="public/styles/css/app.css" >
     <script src="/scripts/jquery-2.2.2.min.js"></script>
+    <script src="/bootstrap/js/bootstrap.min.js"></script>
 </head>
 <body class="container">
 
