--- a/public/styles/sass/app.scss
+++ b/public/styles/sass/app.scss
@@ -1,4 +1,64 @@
-// body{
-//   color: green;
-//   background: blue;
-// }
+body h2{
+  text-align: center;
+}
+.col-xs-15,
+.col-sm-15,
+.col-md-15,
+.col-lg-15 {
+    position: relative;
+    min-height: 1px;
+    padding-right: 10px;
+    padding-left: 10px;
+}
+.col-xs-15 {
+    width: 20%;
+    float: left;
+}
+@media (min-width: 768px) {
+.col-sm-15 {
+        width: 20%;
+        float: left;
+    }
+}
+@media (min-width: 992px) {
+    .col-md-15 {
+        width: 20%;
+        float: left;
+    }
+}
+@media (min-width: 1200px) {
+    .col-lg-15 {
+        width: 20%;
+        float: left;
+    }
+}
+
+.panel{
+  .question-image{
+    max-width:40%;
+    margin: 15px auto;
+    display: block;
+  }
+  .row{
+    margin: 15px 0;
+
+    .choice {
+      text-align: center;
+      padding-right: 15px;
+      padding-left: 15px;
+
+      .thumbnail {
+        margin-bottom: 0;
+
+        img{
+          max-width: 90%;
+        }
+      }
+    }
+  }
+}
+
+footer img{
+  display: block;
+  margin: 0 auto;
+}
