--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,12 +8,13 @@
 
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css" charset="utf-8">
 
-    <link rel="stylesheet" href="public/styles/css/app.css" >
+    <link rel="stylesheet" href="/public/styles/css/app.css" >
     <script src="/scripts/jquery-2.2.2.min.js"></script>
     <script src="/bootstrap/js/bootstrap.min.js"></script>
 </head>
 <body class="container">
 
+  <h2>Chemistry 1Ad Exam Question Database (BETA)</h2>
 PRINT GOES HERE
 FILTERS GO HERE
 
