--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css" charset="utf-8">
 
-    <link rel="stylesheet" href="/public/styles/css/app.css" >
+    <link rel="stylesheet" href="/styles/css/app.css" >
     <script src="/scripts/jquery-2.2.2.min.js"></script>
     <script src="/scripts/ejs.min.js"></script>
     <script src="/bootstrap/js/bootstrap.min.js"></script>
