--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -18,8 +18,9 @@
 <body class="container">
 
   <h2>Chemistry 1Ad Exam Question Database (BETA)</h2>
-PRINT GOES HERE
-FILTERS GO HERE
+
+    <%# include ../partials/filters %>
+
    <nav>
       <ul class="pager">
           <li><a class="previousPageButton" href="#">Previous Page</a></li>
@@ -46,41 +47,25 @@ FILTERS GO HERE
       socket.on('connect', function(){
         console.log('Client: connected to server!');
       });
-      $('.nextPageButton').on('click', function(){
-        console.log('next page button was clicked');
-        socket.emit('nextPage');
-      });
-      //Server sends the next page
-      socket.on('nextPage', function(data){
-        //render the ejs questions template
-        if(data.currentPage === 1){
-          $('.previousPageButton').hide();
-        } else {
+      socket.on('newPage', function(data){
+        if(data.showPrevious)
           $('.previousPageButton').show();
-        }
-        if(data.showNextButton)
+        else
+          $('.previousPageButton').hide();
+
+        if(data.showNext)
           $('.nextPageButton').show();
         else
           $('.nextPageButton').hide();
 
-        console.log('client hears the next page and now has some questions');
-        $('main').html(data.questions);
+          $('main').html(data.questionsHTML);
+      });
+
+      $('.nextPageButton').on('click', function(){
+        socket.emit('nextPage');
       });
       $('.previousPageButton').on('click', function(){
-        console.log('previous page button was clicked');
         socket.emit('previousPage');
-      });
-      socket.on('previousPage', function(data){
-        if(data.currentPage === 1){
-          $('.previousPageButton').hide();
-        } else {
-          $('.previousPageButton').show();
-        }
-        if(data.showNextButton)
-          $('.nextPageButton').show();
-        else
-          $('.nextPageButton').hide();
-        $('main').html(data.questions);
       });
     </script>
 </body>
