Initial work on filtering with difficulty. Needs to be refactored slightly, add filtering for topics, check for concurrency issues

--- a/public/styles/sass/app.scss
+++ b/public/styles/sass/app.scss
@@ -36,6 +36,18 @@ body h2{
     }
 }
 
+.dropdown{
+  ul a.selected{
+    .glyphicon-ok{
+      display:inline-block;
+    }
+  }
+  .glyphicon-ok{
+    float:right;
+    display:none;
+  }
+}
+
 .panel{
   border-color: $berkeleyBlue;
   .panel-heading{
