--- a/public/styles/sass/app.scss
+++ b/public/styles/sass/app.scss
@@ -37,14 +37,23 @@ body h2{
 }
 
 .dropdown{
-  ul a.selected{
-    .glyphicon-ok{
-      display:inline-block;
-    }
-  }
+  display: inline-block;
+
   .glyphicon-ok{
     float:right;
     display:none;
+  }
+
+  .dropdown-menu>li>a{
+    padding: 3px 30px;
+    position: relative;
+
+    &.selected .glyphicon-ok{
+      display:inline-block;
+      position: absolute;
+      top: 6px;
+      right: 8px;
+    }
   }
 }
 
