--- a/views/partials/filters.ejs
+++ b/views/partials/filters.ejs
@@ -1,6 +1,6 @@
 
 
-<div id="difficulty-filter" class="dropdown">
+<div id="difficulty-filter" class="filter dropdown">
   <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
     Difficulty
     <span class="caret"></span>
@@ -11,24 +11,23 @@
     <li><a href="#">3<span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a></li>
   </ul>
 </div>
-<!--
-<%# <div id="topic-filter" class="dropdown">
+
+ <div id="topic-filter" class="filter dropdown">
   <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
     Topic
     <span class="caret"></span>
   </button>
   <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-    <li><a href="#">Stoichiometry and Reactions</a></li>
-    <li><a href="#">Light, Waves and Particles</a></li>
-    <li><a href="#">Light, Absorption and Emission</a></li>
-    <li><a href="#">Atomic Structure and Orbitals</a></li>
-    <li><a href="#">Molecular Structure and Orbitals</a></li>
-    <li><a href="#">Gases Ideal and Real</a></li>
-    <li><a href="#">Thermodynamics</a></li>
-    <li><a href="#">Reactions and Equilibirum</a></li>
-    <li><a href="#">Acids and Bases</a></li>
-    <li><a href="#">Electro Chemistry</a></li>
-    <li><a href="#">Nuclear Chemistry</a></li>
+    <li><a href="#">Stoichiometry and Reactions<span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a></li>
+    <li><a href="#">Light, Waves and Particles<span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a></li>
+    <li><a href="#">Light, Absorption and Emission<span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a></li>
+    <li><a href="#">Atomic Structure and Orbitals<span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a></li>
+    <li><a href="#">Molecular Structure and Orbitals<span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a></li>
+    <li><a href="#">Gases Ideal and Real<span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a></li>
+    <li><a href="#">Thermodynamics<span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a></li>
+    <li><a href="#">Reactions and Equilibirum<span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a></li>
+    <li><a href="#">Acids and Bases<span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a></li>
+    <li><a href="#">Electro Chemistry<span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a></li>
+    <li><a href="#">Nuclear Chemistry<span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a></li>
   </ul>
-</div>%>
--->
+</div>
