--- a/views/partials/filters.ejs
+++ b/views/partials/filters.ejs
@@ -31,3 +31,5 @@
     <li><a href="#">Nuclear Chemistry<span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a></li>
   </ul>
 </div>
+
+<button id="clearFilters" type="button" class="btn btn-default">Clear All</button>
