Changing Electro Chemistry to Electrochemistry

--- a/views/partials/filters.ejs
+++ b/views/partials/filters.ejs
@@ -27,7 +27,7 @@
     <li><a href="#">Thermodynamics<span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a></li>
     <li><a href="#">Reactions and Equilibirum<span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a></li>
     <li><a href="#">Acids and Bases<span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a></li>
-    <li><a href="#">Electro Chemistry<span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a></li>
+    <li><a href="#">Electrochemistry<span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a></li>
     <li><a href="#">Nuclear Chemistry<span class="glyphicon glyphicon-ok" aria-hidden="true"></span></a></li>
   </ul>
 </div>
